# project_template

cxx_cmake/: CMakeLists.txt  pixi.toml
ros_colcon/: ReadMe.md
